# ICP-Project

./: .editorconfig  .gitignore  CMakeLists.txt  DebugTextEdit.cpp  DebugTextEdit.h  ERDview.cpp  ERDview.h  Highlighter.cpp  Highlighter.h  ICP-Project.pro  MainTextEdit.cpp  MainTextEdit.h  MainWindow.cpp  MainWindow.h  Makefile  README.md  README.txt  SEQview.cpp  Syntax.cpp  Syntax.h  TextCode.cpp  TextCode.h  TextDebug.cpp  example_uml.txt  graphview.cpp  graphview.h  highlighter.cpp  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  post-merge  resources.qrc  windeployqt.cmake
Code/: Analyzer.cpp  Analyzer.h  Highlighter.cpp  Highlighter.h  Semantics.cpp  Semantics.h  Syntax.cpp  Syntax.h  SyntaxRules.cpp  SyntaxRules.h  TextCode.cpp  TextCode.h  TextDebug.cpp  syntax.cpp  syntax.h
Graph/: DragItem.cpp  DragItem.h  ERDview.cpp  ERDview.h  SEQview.cpp  SEQview.h  draglabel.cpp
doc/: Doxyfile
examples/: Error_example_1.txt  Error_example_2.txt  Error_example_3.txt  OK_example.txt  Warnings_example.txt  Warnings_example_1.txt  app_structure.txt  example_1.txt  example_uml.txt
include/: Analyzer.h  CMath.h  CodeService.h  DebugService.h  HighlightService.h  Highlighter.h  MainWindow.h  Semantics.h  Syntax.h  TextCode.h  TextDebug.h  Types.h  pch.h
include/Graph/: DragItem.h  DragItemPrecomp.h  ERDItem.h  ERDview.h  (+3 more)
pch/: precompile_header.h
src/: Analyzer.cpp  CodeService.cpp  DebugService.cpp  HighlightService.cpp  Highlighter.cpp  MainWindow.cpp  Makefile  Semantics.cpp  Syntax.cpp  TextDebug.cpp  main.cpp
xcluded/: example_uml.txt
(+61 files in other folders)
